WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24525
REGRESSION: Inspector window doesn't close when corresponding page window is closed
https://bugs.webkit.org/show_bug.cgi?id=24525
Summary
REGRESSION: Inspector window doesn't close when corresponding page window is ...
Dimitri Glazkov (Google)
Reported
2009-03-11 15:41:27 PDT
Because I recently made InspectorController ref-counted, it won't destruct naturally by itself when Page is destroyed. I will be fixing this shortly.
Attachments
Fix for inspector window closing regression, v1.
(2.14 KB, patch)
2009-03-12 12:47 PDT
,
Dimitri Glazkov (Google)
manyoso
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-03-12 12:47:09 PDT
Created
attachment 28541
[details]
Fix for inspector window closing regression, v1. WebCore/ChangeLog | 15 +++++++++++++++ WebCore/inspector/InspectorController.cpp | 14 ++++++-------- 2 files changed, 21 insertions(+), 8 deletions(-)
Dimitri Glazkov (Google)
Comment 2
2009-03-12 12:55:17 PDT
Landed as
http://trac.webkit.org/changeset/41643
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug