2009-03-12  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Adam Treat.

        https://bugs.webkit.org/show_bug.cgi?id=24525
        REGRESSION: Inspector window doesn't close when inspected page is
        destroyed. This is a revert of r41158, which became unnecessary when
        InspectorController became ref-counted in r41462.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::inspectedPageDestroyed): Reset m_inspectedPage
            after calling close().
        (WebCore::InspectorController::stopUserInitiatedProfiling): Remove
            m_inspectedPage check guard around profile logic.

Canonical link: https://commits.webkit.org/33702@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41643 268f45cc-cd09-0410-ab3c-d52691b4dbfc