WebCore/inspector/InspectorController.cpp
@@ -299,10 +299,10 @@ InspectorController::~InspectorController()
 
 void InspectorController::inspectedPageDestroyed()
 {
+    close();
+
     ASSERT(m_inspectedPage);
     m_inspectedPage = 0;
-
-    close();
 }
 
 bool InspectorController::enabled() const
@@ -837,12 +837,10 @@ void InspectorController::stopUserInitiatedProfiling()
     title += ".";
     title += UString::from(m_currentUserInitiatedProfileNumber);
 
-    if (m_inspectedPage) {
-        ExecState* exec = toJSDOMWindow(m_inspectedPage->mainFrame())->globalExec();
-        RefPtr<Profile> profile = Profiler::profiler()->stopProfiling(exec, title);
-        if (profile)
-            addProfile(profile, 0, UString());
-    }
+    ExecState* exec = toJSDOMWindow(m_inspectedPage->mainFrame())->globalExec();
+    RefPtr<Profile> profile = Profiler::profiler()->stopProfiling(exec, title);
+    if (profile)
+        addProfile(profile, 0, UString());
 
     toggleRecordButton(false);
 }
